Remove overflow property to address rendering issue RM 2711

--- a/web/sites/all/themes/findit_cambridge/css/layout.css
+++ b/web/sites/all/themes/findit_cambridge/css/layout.css
@@ -25,7 +25,6 @@
 
 .l-body {
   min-height: 30em;
-  overflow: auto;
   padding-bottom: 1.5em;
 }
 
